# O

./: .env  .gitignore  README.md  package-lock.json  package.json
frontend/: .eslintrc.js  config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/public/icons/: Icon.tsx
frontend/scripts/: generateIconPaths.js
frontend/src/: App.js  globals.css  index.css  index.js  output.css  theme.js
frontend/src/components/: DevicesAndData.jsx  SettingsCard.jsx  SettingsPage.jsx  SettingsTabs.jsx  Sidebar.jsx
frontend/src/components/SettingsSections/: Camera.jsx  FilesAndFolders.jsx  Keyboard.jsx  Mic.jsx  Mouse.jsx  Processes.jsx  Screen.jsx  Session.jsx
frontend/src/components/shadcn/: switch.tsx
frontend/src/components/ui/: HeaderTabs.css  HeaderTabs.jsx  iconPaths.js  tabs.jsx
frontend/src/components/ui/icons/: Icon.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: utils.js
src/: App.css  App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
