[package]
name = "o-screen-recorder"
version = "0.1.0"
description = "A Tauri-based screen recorder application"
authors = ["Your Name <your.email@example.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "dialog-all", "system-tray"] }
image = "0.24.6"
scrap = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
