[package]
name = "o-screen-recorder"
version = "0.1.0"
description = "A Tauri-based screen recorder application"
authors = ["Your Name <your.email@example.com>"]
license = ""
repository = ""
edition = "2018"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.7.2", features = ["api-all"] }
image = "0.24.6"
scrap = "0.5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
